# ocaml-boxroot

./: .gitignore  .gitlab-ci.yml  Changes  Changes.md  LICENSE  Makefile  Makefile.common  README.md  abstract_value.c  abstract_value.h  boxroot.c  boxroot.h  choice_boxroots.ml  choice_boxroots_stubs.c  choice_fake_boxroots_stubs.c  choice_fast_boxroots.ml  choice_fast_boxroots_stubs.c  choice_gc.ml  choice_generational_global_roots.ml  choice_global_roots.ml  choice_global_roots_stubs.c  choice_ocaml_ephemeral.ml  dune  dune-project  fake_boxroot.c  fake_boxroot.h  fast_boxroot.c  fast_boxroot.h  perm_count.ml  synthetic.ml
benchmarks/: dune  globroots.ml  local_roots.ml  local_roots_gen_boxroot.h  local_roots_stubs.c  perm_count.ml  synthetic.ml
benchmarks/lib-choice/: choice_boxroots.ml  choice_boxroots_stubs.c  choice_config.ml  choice_ephemeral.ml  choice_fake_boxroots.ml  choice_functor.h  choice_gc_stubs.c  choice_generational_global_roots_stubs.c  choice_global_roots_stubs.c  choice_ocaml_persistent.ml  choice_persistent.ml  config.ml  ephemeral.ml  linked_list.h  persistent.ml
benchmarks/lib-ref/: abstract_out_of_heap.c  abstract_out_of_heap.h  boxroot.c  boxroot_ref.ml  config.ml  dll_boxroot.c  dll_boxroot_ref.ml  dune  gc.c  gc_ref.ml  gen_boxroot.h  generational.c  generational_ref.ml  global.c  global_ref.ml  ocaml.ml  ocaml_ref.ml  ref_config.ml  rem_boxroot.c  rem_boxroot_ref.ml  tagged_out_of_heap.c  tagged_out_of_heap.h
boxroot/: boxroot.c  boxroot.h  dll_boxroot.c  dune  ocaml_hooks.c  ocaml_hooks.h  platform.c  platform.h  rem_boxroot.c  rem_boxroot.h
choice/: config.ml  value_list_functor.h
dll_boxroot/: dll_boxroot.c  dll_boxroot.h  dune
rust/ocaml-boxroot-sys/: Cargo.toml  README.md  build.rs
rust/ocaml-boxroot-sys/src/: lib.rs
rust/ocaml-boxroot-sys/utils/without-ocamlopt/caml/: mlvalues.h
