(executable
  (name perm_count)
  (libraries ref choice)
  (modules perm_count)
)

(executable
  (name synthetic)
  (libraries ref)
  (modules synthetic)
)

(executable
  (name globroots)
  (libraries ref)
  (modules globroots)
)

(executable
  (name local_roots)
  (foreign_archives
     ../boxroot/boxroot
  )
  (foreign_stubs (language c)
    (extra_deps
      ../boxroot/boxroot.h
      ../boxroot/dll_boxroot.h
      ../boxroot/rem_boxroot.h
      ../boxroot/ocaml_hooks.h
      ../boxroot/platform.h
    )
    (flags -DENABLE_BOXROOT_MUTEX=%{env:ENABLE_BOXROOT_MUTEX=0}
        -DBOXROOT_DEBUG=%{env:BOXROOT_DEBUG=0}
        -Wall -Wshadow -Wpointer-arith -Wcast-qual -Wsign-compare
        -O2 -fno-strict-aliasing)
    (names local_roots_stubs)
  )
  (modules local_roots)
)
