(executable
  (name perm_count)
  (libraries ref choice)
  (modules perm_count)
)

(executable
  (name synthetic)
  (libraries ref)
  (modules synthetic)
)

(executable
  (name globroots)
  (libraries ref)
  (modules globroots)
)

(executable
  (name local_roots)
  (foreign_archives
     ../boxroot/boxroot
  )
  (foreign_stubs (language c)
    (extra_deps
      ../boxroot/boxroot.h
      ../boxroot/dll_boxroot.h
      ../boxroot/rem_boxroot.h
      ../boxroot/ocaml_hooks.h
      ../boxroot/platform.h
    )
    (names local_roots_stubs)
  )
  (modules local_roots)
)
