(foreign_library
 (archive_name boxroot)
 (language c)
 (names boxroot dll_boxroot rem_boxroot ocaml_hooks)
 (flags -DENABLE_BOXROOT_MUTEX=%{env:ENABLE_BOXROOT_MUTEX=0}
        -DBOXROOT_DEBUG=%{env:BOXROOT_DEBUG=0}
        -Wall -Wshadow -Wpointer-arith -Wcast-qual -Wsign-compare
        -O2 -fno-strict-aliasing)
)


