(library
  (name ref)
  (foreign_archives
     ../../boxroot/boxroot
     ../../boxroot/dll_boxroot
  )
  (foreign_stubs (language c)
    (extra_deps
      ../../boxroot/boxroot.h
      ../../boxroot/dll_boxroot.h
    )
    (names
      tagged_out_of_heap
      gc
      boxroot
      dll_boxroot
      global
      generational
    )
  )
)
