(library
  (name ref)
  (foreign_archives
     ../../boxroot/boxroot
  )
  (foreign_stubs (language c)
    (extra_deps
      ../../boxroot/boxroot.h
      ../../boxroot/dll_boxroot.h
      ../../boxroot/rem_boxroot.h
      ../../boxroot/ocaml_hooks.h
      ../../boxroot/platform.h
    )
    (names
      tagged_out_of_heap
      gc
      boxroot
      dll_boxroot
      rem_boxroot
      global
      generational
    )
  )
)
