[package]
name = "ocaml-boxroot-sys"
version = "0.1.0"
authors = ["Bruno Deferrari <utizoc@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
cc = { version = "^1.0" }

[features]
link-ocaml-runtime = []